--- a/package.json
+++ b/package.json
@@ -96,6 +96,7 @@
         "assert": "^2.0.0",
         "autoprefixer": "^10.4.17",
         "crypto-browserify": "^3.12.0",
+        "daisyui": "^4.12.8",
         "https-browserify": "^1.0.0",
         "npm-run-all": "^4.1.5",
         "os-browserify": "^0.3.0",
