--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "dependencies": {
         "@apollo/client": "^3.9.2",
         "@cartesi/rollups": "1.0.0",
+        "@clerk/clerk-react": "^5.2.5",
+        "@clerk/nextjs": "^5.1.6",
         "@ethersproject/providers": "^5.6.0",
         "@openzeppelin/contracts": "4.8.3",
         "@radix-ui/react-alert-dialog": "^1.0.5",
