--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
     "dependencies": {
         "@apollo/client": "^3.9.2",
         "@cartesi/rollups": "1.0.0",
-        "@clerk/clerk-react": "^5.2.5",
-        "@clerk/nextjs": "^5.1.6",
+        "@clerk/nextjs": "^6.10.4",
         "@ethersproject/providers": "^5.6.0",
         "@openzeppelin/contracts": "4.8.3",
         "@radix-ui/react-alert-dialog": "^1.0.5",
@@ -39,7 +38,7 @@
         "@web3-onboard/react": "^2.1.5",
         "buffer": "^6.0.3",
         "cacheable-request": "^10.2.7",
-        "convex": "^1.9.0",
+        "convex": "^1.18.2",
         "d3": "^7.8.5",
         "ethers": "5.7.2",
         "graphql": "^16.4.0",
@@ -47,7 +46,7 @@
         "loader-utils": "3.2.1",
         "lucide-react": "^0.320.0",
         "minimatch": "^3.0.5",
-        "next": "14.0.1",
+        "next": "^15.1.6",
         "nth-check": "2.0.1",
         "react": "^18.1.0",
         "react-dom": "^18.1.0",
