--- a/package.json
+++ b/package.json
@@ -60,7 +60,6 @@
         "socket.io-client": "^4.7.4",
         "ts-node": "^10.9.1",
         "tw-elements": "^1.1.0",
-        "typescript": "^4.6.4",
         "urql": "^2.2.0",
         "web-vitals": "^2.1.0",
         "web3": "^1.7.3",
@@ -94,10 +93,13 @@
         "@graphql-codegen/typescript-urql": "^3.5.7",
         "@graphql-typed-document-node/core": "^3.1.1",
         "@typechain/ethers-v5": "^10.0.0",
+        "@typescript-eslint/eslint-plugin": "^8.22.0",
+        "@typescript-eslint/parser": "^8.22.0",
         "assert": "^2.0.0",
         "autoprefixer": "^10.4.17",
         "crypto-browserify": "^3.12.0",
         "daisyui": "^4.12.8",
+        "eslint-config-next": "^15.1.6",
         "https-browserify": "^1.0.0",
         "npm-run-all": "^4.1.5",
         "os-browserify": "^0.3.0",
@@ -108,6 +110,7 @@
         "stream-http": "^3.2.0",
         "tailwindcss": "^3.4.1",
         "typechain": "^8.0.0",
+        "typescript": "^5.7.3",
         "url": "^0.11.0"
     }
 }
